# MPIS_HW_3

./: README.md
MPIS_HW3_EX1/: CMakeLists.txt  main.cpp
MPIS_HW3_EX1/include/: experiments.h  funcWrapper.h  matplotlibcpp.h
MPIS_HW3_EX1/src/: experiments.cpp  funcWrapper.cpp
MPIS_HW3_EX2/: CMakeLists.txt  main.cpp
MPIS_HW3_EX2/include/: experiments.h  plots.h
MPIS_HW3_EX2/src/: experiments.cpp  funcWrapper.cpp
MPIS_HW3_EX3/include/: experiments.h
MPIS_HW3_EX3/src/: experiments.cpp
MPIS_HW_EX3/: CMakeLists.txt  main.cpp
MPIS_HW_EX3/include/: funcWrapper.h
MPIS_HW_EX3/src/: funcWrapper.cpp  plots.cpp
